--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -31,17 +31,17 @@
 </div>
 
 <div id="header">
-    <h2>Schedule-Pro{%block title %}{% endblock %}</h2> 
+    <h2>Schedule-Pro{%block title %}{% endblock %}</h2>
 </div>
 
 <div id="sidebar-left">
-{%block sidebar-left %}{% endblock %}
+{%block sidebar_left %}{% endblock %}
 </div>
 <div id="main-content">
 {%block main_content %}{% endblock %}
 </div>
 <div id="sidebar-right">
-{%block sidebar-right %}{% endblock %}
+{%block sidebar_right %}{% endblock %}
 </div>
 </body>
 </html>
