--- a/templates/account/account-create.html
+++ b/templates/account/account-create.html
@@ -10,7 +10,7 @@
     <table>
       <tr>
         <td width="150">Email Address:</td>
-        <td width="300">{{ user.email }}</td>
+        <td width="300">{{ user.email() }}</td>
       </tr>
       <tr>
         <td>First Name:</td>
@@ -21,6 +21,6 @@
         <td><input name="last_name" id="last_name" type="text" /></td>
       </tr>
     </table>
-    <input id="submit" name="submit" type="submit" value="Create Account" />    
+    <input id="submit" name="submit" type="submit" value="Create Account" />
     </form>
 {% endblock %}
