--- a/templates/calendar/calendar-create.html
+++ b/templates/calendar/calendar-create.html
@@ -37,12 +37,12 @@ $(document).ready(function(){
         <td><select id="project" name="project">
               <option selected="selected">Not assigned to Project</option>
             {% for p in projects %}
-              <option value="{{ p.key }}">{{ p.name }}</option>
+              <option value="{{ p.key.urlsafe() }}">{{ p.name }}</option>
             {% endfor %}
             </select>
         </td>
       </tr>
     </table>
-    <input id="submit" name="submit" type="submit" value="Add Calendar" />    
+    <input id="submit" name="submit" type="submit" value="Add Calendar" />
     </form>
 {% endblock %}
