--- a/templates/calendar/event-create.html
+++ b/templates/calendar/event-create.html
@@ -32,7 +32,7 @@ $(document).ready(function(){
         <td>Calendar:</td>
         <td><select id="calendar" name="calendar">
             {% for cal in calendars %}
-              <option value="{{ cal.key }}">{{ cal.name }}</option>
+              <option value="{{ cal.key.urlsafe() }}">{{ cal.name }}</option>
             {% endfor %}
             </select>
         </td>
@@ -40,14 +40,14 @@ $(document).ready(function(){
       <tr>
         <td>Start Time:</td>
         <td>
-            <input name="start_date" id="start_date" class="datetime" type="text" value="{% now "d/m/Y" %}" />
+            <input name="start_date" id="start_date" class="datetime" type="text" value="{{ now.strftime('%d/%m/%Y') }}" />
             <input name="start_time" id="start_time" class="datetime" type="text" value="" />
         </td>
       </tr>
       <tr>
         <td>End Time:</td>
         <td>
-            <input name="end_date" id="end_date" class="datetime" type="text" value="{% now "d/m/Y" %}" />
+            <input name="end_date" id="end_date" class="datetime" type="text" value="{{ now.strftime('%d/%m/%Y') }}" />
             <input name="end_time" id="end_time" class="datetime" type="text" value="" />
         </td>
       </tr>
@@ -73,6 +73,6 @@ $(document).ready(function(){
         </td>
       </tr>
     </table>
-    <input id="submit" name="submit" type="submit" value="Add Event" />    
+    <input id="submit" name="submit" type="submit" value="Add Event" />
     </form>
 {% endblock %}
