--- a/templates/projects/project-modify.html
+++ b/templates/projects/project-modify.html
@@ -12,7 +12,7 @@ $(document).ready(function(){
 
 {%block formtitle %}Modify Project{% endblock %}
 {%block main_content %}
-    <form action="/projects/edit/{{ project.key }}" method="post">
+    <form action="/projects/edit/{{ project.key.urlsafe() }}" method="post">
     <table>
       <tr>
         <td width="150">Name:</td>
@@ -27,6 +27,6 @@ $(document).ready(function(){
         <td><input name="colour" id="colour" type="text" value="{{ project.colour }}" /></td>
       </tr>
     </table>
-    <input id="submit" name="submit" type="submit" value="Save Project" />    
+    <input id="submit" name="submit" type="submit" value="Save Project" />
     </form>
 {% endblock %}
