--- a/templates/tasks/list-create.html
+++ b/templates/tasks/list-create.html
@@ -23,7 +23,7 @@ $(document).ready(function(){
         <td><select id="project" name="project">
               <option selected="selected">Not assigned to Project</option>
             {% for p in projects %}
-              <option value="{{ p.key }}">{{ p.name }}</option>
+              <option value="{{ p.key.urlsafe() }}">{{ p.name }}</option>
             {% endfor %}
             </select>
         </td>
@@ -37,6 +37,6 @@ $(document).ready(function(){
         <td><input name="colour" id="colour" type="text" value="{{ rand_col }}" /></td>
       </tr>
     </table>
-    <input id="submit" name="submit" type="submit" value="Add Task List" />    
+    <input id="submit" name="submit" type="submit" value="Add Task List" />
     </form>
 {% endblock %}
