--- a/templates/tasks/task-create.html
+++ b/templates/tasks/task-create.html
@@ -37,18 +37,18 @@ $(function() {
         <td>Task List:</td>
         <td><select id="task_list" name="task_list">
             {% for tl in task_lists %}
-              <option value="{{ tl.key }}">{{ tl.name }}</option>
+              <option value="{{ tl.key.urlsafe() }}">{{ tl.name }}</option>
             {% endfor %}
             </select>
         </td>
       </tr>
       <tr>
         <td>Start Date:</td>
-        <td><input name="start_date" id="start_date" type="text" value="{% now "Y-m-d" %}" /></td>
+        <td><input name="start_date" id="start_date" type="text" value="{{ now.strftime("%Y-%m-%d") }}" /></td>
       </tr>
       <tr>
         <td>Due Date:</td>
-        <td><input name="due_date" id="due_date" type="text" value="{% now "Y-m-d" %}" /></td>
+        <td><input name="due_date" id="due_date" type="text" value="{{ now.strftime("%Y-%m-%d") }}" /></td>
       </tr>
       <tr>
         <td>Percent Complete:</td>
@@ -58,6 +58,6 @@ $(function() {
         </td>
       </tr>
     </table>
-    <input id="submit" name="submit" type="submit" value="Add Task" />    
+    <input id="submit" name="submit" type="submit" value="Add Task" />
     </form>
 {% endblock %}
