--- a/templates/tasks/task-modify.html
+++ b/templates/tasks/task-modify.html
@@ -28,7 +28,7 @@ $(function() {
 
 {%block formtitle %}Modify Task{% endblock %}
 {%block main_content %}
-    <form action="/tasks/task/edit/{{ task.key }}" method="post">
+    <form action="/tasks/task/edit/{{ task.key.urlsafe() }}" method="post">
     <table>
       <tr>
         <td width="150">Name:</td>
@@ -38,7 +38,7 @@ $(function() {
         <td>Task List:</td>
         <td><select id="task_list" name="task_list">
             {% for tl in task_lists %}
-              <option value="{{ tl.key }}"{% if tl.key == task.task_list.key %} selected="selected"{% endif %}>{{ tl.name }}</option>
+              <option value="{{ tl.key.urlsafe() }}"{% if tl.key == task.task_list.key %} selected="selected"{% endif %}>{{ tl.name }}</option>
             {% endfor %}
             </select>
         </td>
@@ -46,10 +46,10 @@ $(function() {
       <tr>
         <td>Parent Task:</td>
         <td><select id="parent_task" name="parent_task">
-              <option value="None"{% if task.parent_task.key == None %} selected="selected"{% endif %}>No Parent</option>
+              <option value="None"{% if task.parent_task == None %} selected="selected"{% endif %}>No Parent</option>
             {% for t in tasks %}
               {% if t.key != task.key %}
-              <option value="{{ t.key }}"{% if task.parent_task.key == t.key %} selected="selected"{% endif %}>{{ t.name }}</option>
+              <option value="{{ t.key.urlsafe() }}"{% if task.parent_task == t.key %} selected="selected"{% endif %}>{{ t.name }}</option>
               {% endif %}
             {% endfor %}
             </select>
@@ -57,11 +57,11 @@ $(function() {
       </tr>
       <tr>
         <td>Start Date:</td>
-        <td><input name="start_date" id="start_date" type="text" value="{{ task.start_date|date:'Y-m-d' }}" /></td>
+        <td><input name="start_date" id="start_date" type="text" value="{{ task.start_date.strftime('%Y-%m-%d') }}" /></td>
       </tr>
       <tr>
         <td>Due Date:</td>
-        <td><input name="due_date" id="due_date" type="text" value="{{ task.due_date|date:'Y-m-d' }}" /></td>
+        <td><input name="due_date" id="due_date" type="text" value="{{ task.due_date.strftime('%Y-%m-%d') }}" /></td>
       </tr>
       <tr>
         <td>Percent Complete:</td>
@@ -71,6 +71,6 @@ $(function() {
         </td>
       </tr>
     </table>
-    <input id="submit" name="submit" type="submit" value="Save Task" />    
+    <input id="submit" name="submit" type="submit" value="Save Task" />
     </form>
 {% endblock %}
